--- a/vignettes/adj-seq-p.Rmd
+++ b/vignettes/adj-seq-p.Rmd
@@ -156,12 +156,14 @@ gs_corr %>% round(2)
 
 ```{r, wpgsdSeqIA, message=FALSE}
 seq_p_IA_H123 <- calc_seq_p(
-  test_analysis = 1, 
+  test_analysis = 1,
   test_hypothesis = "H1, H2, H3",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), 
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ),
   alpha_spending_type = 2,
   n_analysis = 2,
   initial_weight = w,
@@ -174,12 +176,14 @@ seq_p_IA_H123 <- calc_seq_p(
 )
 
 seq_p_IA_H12 <- calc_seq_p(
-  test_analysis = 1, 
+  test_analysis = 1,
   test_hypothesis = "H1, H2",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), 
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ),
   alpha_spending_type = 2,
   n_analysis = 2,
   initial_weight = w,
@@ -192,12 +196,14 @@ seq_p_IA_H12 <- calc_seq_p(
 )
 
 seq_p_IA_H13 <- calc_seq_p(
-  test_analysis = 1, 
+  test_analysis = 1,
   test_hypothesis = "H1, H3",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])),
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ),
   alpha_spending_type = 2,
   n_analysis = 2,
   initial_weight = w,
@@ -212,10 +218,12 @@ seq_p_IA_H13 <- calc_seq_p(
 seq_p_IA_H23 <- calc_seq_p(
   test_analysis = 1, # stage of interest
   test_hypothesis = "H2, H3",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])),
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ),
   alpha_spending_type = 2,
   n_analysis = 2,
   initial_weight = w,
@@ -228,12 +236,14 @@ seq_p_IA_H23 <- calc_seq_p(
 )
 
 seq_p_IA_H1 <- calc_seq_p(
-  test_analysis = 1, 
+  test_analysis = 1,
   test_hypothesis = "H1",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), 
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ),
   alpha_spending_type = 2,
   n_analysis = 2,
   initial_weight = w,
@@ -246,12 +256,14 @@ seq_p_IA_H1 <- calc_seq_p(
 )
 
 seq_p_IA_H2 <- calc_seq_p(
-  test_analysis = 1, 
+  test_analysis = 1,
   test_hypothesis = "H2",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), 
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ),
   alpha_spending_type = 2,
   n_analysis = 2,
   initial_weight = w,
@@ -264,12 +276,14 @@ seq_p_IA_H2 <- calc_seq_p(
 )
 
 seq_p_IA_H3 <- calc_seq_p(
-  test_analysis = 1, 
+  test_analysis = 1,
   test_hypothesis = "H3",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), 
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ),
   alpha_spending_type = 2,
   n_analysis = 2,
   initial_weight = w,
@@ -286,10 +300,12 @@ seq_p_IA_H3 <- calc_seq_p(
 seq_p_IA_H123_B <- calc_seq_p(
   test_analysis = 1, # stage of interest
   test_hypothesis = "H1, H2, H3",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), # observed p-value
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ), # observed p-value
   alpha_spending_type = 0,
   n_analysis = 2,
   initial_weight = w,
@@ -304,10 +320,12 @@ seq_p_IA_H123_B <- calc_seq_p(
 seq_p_IA_H12_B <- calc_seq_p(
   test_analysis = 1, # stage of interest
   test_hypothesis = "H1, H2",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), # observed p-value
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ), # observed p-value
   alpha_spending_type = 0,
   n_analysis = 2,
   initial_weight = w,
@@ -322,10 +340,12 @@ seq_p_IA_H12_B <- calc_seq_p(
 seq_p_IA_H13_B <- calc_seq_p(
   test_analysis = 1, # stage of interest
   test_hypothesis = "H1, H3",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), # observed p-value
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ), # observed p-value
   alpha_spending_type = 0,
   n_analysis = 2,
   initial_weight = w,
@@ -340,10 +360,12 @@ seq_p_IA_H13_B <- calc_seq_p(
 seq_p_IA_H23_B <- calc_seq_p(
   test_analysis = 1, # stage of interest
   test_hypothesis = "H2, H3",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), # observed p-value
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ), # observed p-value
   alpha_spending_type = 0,
   n_analysis = 2,
   initial_weight = w,
@@ -358,10 +380,12 @@ seq_p_IA_H23_B <- calc_seq_p(
 seq_p_IA_H1_B <- calc_seq_p(
   test_analysis = 1, # stage of interest
   test_hypothesis = "H1",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), # observed p-value
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ), # observed p-value
   alpha_spending_type = 0,
   n_analysis = 2,
   initial_weight = w,
@@ -376,10 +400,12 @@ seq_p_IA_H1_B <- calc_seq_p(
 seq_p_IA_H2_B <- calc_seq_p(
   test_analysis = 1, # stage of interest
   test_hypothesis = "H2",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), # observed p-value
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ), # observed p-value
   alpha_spending_type = 0,
   n_analysis = 2,
   initial_weight = w,
@@ -394,10 +420,12 @@ seq_p_IA_H2_B <- calc_seq_p(
 seq_p_IA_H3_B <- calc_seq_p(
   test_analysis = 1, # stage of interest
   test_hypothesis = "H3",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), # observed p-value
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ), # observed p-value
   alpha_spending_type = 0,
   n_analysis = 2,
   initial_weight = w,
@@ -416,10 +444,12 @@ seq_p_IA_H3_B <- calc_seq_p(
 seq_p_FA_H123 <- calc_seq_p(
   test_analysis = 2, # stage of interest
   test_hypothesis = "H1, H2, H3",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), # observed p-value
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ), # observed p-value
   alpha_spending_type = 2,
   n_analysis = 2,
   initial_weight = w,
@@ -434,10 +464,12 @@ seq_p_FA_H123 <- calc_seq_p(
 seq_p_FA_H12 <- calc_seq_p(
   test_analysis = 2, # stage of interest
   test_hypothesis = "H1, H2",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), # observed p-value
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ), # observed p-value
   alpha_spending_type = 2,
   n_analysis = 2,
   initial_weight = w,
@@ -452,10 +484,12 @@ seq_p_FA_H12 <- calc_seq_p(
 seq_p_FA_H13 <- calc_seq_p(
   test_analysis = 2, # stage of interest
   test_hypothesis = "H1, H3",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), # observed p-value
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ), # observed p-value
   alpha_spending_type = 2,
   n_analysis = 2,
   initial_weight = w,
@@ -470,10 +504,12 @@ seq_p_FA_H13 <- calc_seq_p(
 seq_p_FA_H23 <- calc_seq_p(
   test_analysis = 2, # stage of interest
   test_hypothesis = "H2, H3",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), # observed p-value
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ), # observed p-value
   alpha_spending_type = 2,
   n_analysis = 2,
   initial_weight = w,
@@ -488,10 +524,12 @@ seq_p_FA_H23 <- calc_seq_p(
 seq_p_FA_H1 <- calc_seq_p(
   test_analysis = 2, # stage of interest
   test_hypothesis = "H1",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), # observed p-value
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ), # observed p-value
   alpha_spending_type = 2,
   n_analysis = 2,
   initial_weight = w,
@@ -506,10 +544,12 @@ seq_p_FA_H1 <- calc_seq_p(
 seq_p_FA_H2 <- calc_seq_p(
   test_analysis = 2, # stage of interest
   test_hypothesis = "H2",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), # observed p-value
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ), # observed p-value
   alpha_spending_type = 2,
   n_analysis = 2,
   initial_weight = w,
@@ -524,10 +564,12 @@ seq_p_FA_H2 <- calc_seq_p(
 seq_p_FA_H3 <- calc_seq_p(
   test_analysis = 2, # stage of interest
   test_hypothesis = "H3",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), # observed p-value
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ), # observed p-value
   alpha_spending_type = 2,
   n_analysis = 2,
   initial_weight = w,
@@ -544,10 +586,12 @@ seq_p_FA_H3 <- calc_seq_p(
 seq_p_FA_H123_B <- calc_seq_p(
   test_analysis = 2, # stage of interest
   test_hypothesis = "H1, H2, H3",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), # observed p-value
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ), # observed p-value
   alpha_spending_type = 0,
   n_analysis = 2,
   initial_weight = w,
@@ -562,10 +606,12 @@ seq_p_FA_H123_B <- calc_seq_p(
 seq_p_FA_H12_B <- calc_seq_p(
   test_analysis = 2, # stage of interest
   test_hypothesis = "H1, H2",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), # observed p-value
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ), # observed p-value
   alpha_spending_type = 0,
   n_analysis = 2,
   initial_weight = w,
@@ -580,10 +626,12 @@ seq_p_FA_H12_B <- calc_seq_p(
 seq_p_FA_H13_B <- calc_seq_p(
   test_analysis = 2, # stage of interest
   test_hypothesis = "H1, H3",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), # observed p-value
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ), # observed p-value
   alpha_spending_type = 0,
   n_analysis = 2,
   initial_weight = w,
@@ -598,10 +646,12 @@ seq_p_FA_H13_B <- calc_seq_p(
 seq_p_FA_H23_B <- calc_seq_p(
   test_analysis = 2, # stage of interest
   test_hypothesis = "H2, H3",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), # observed p-value
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ), # observed p-value
   alpha_spending_type = 0,
   n_analysis = 2,
   initial_weight = w,
@@ -616,10 +666,12 @@ seq_p_FA_H23_B <- calc_seq_p(
 seq_p_FA_H1_B <- calc_seq_p(
   test_analysis = 2, # stage of interest
   test_hypothesis = "H1",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), # observed p-value
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ), # observed p-value
   alpha_spending_type = 0,
   n_analysis = 2,
   initial_weight = w,
@@ -634,10 +686,12 @@ seq_p_FA_H1_B <- calc_seq_p(
 seq_p_FA_H2_B <- calc_seq_p(
   test_analysis = 2, # stage of interest
   test_hypothesis = "H2",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), # observed p-value
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ), # observed p-value
   alpha_spending_type = 0,
   n_analysis = 2,
   initial_weight = w,
@@ -652,10 +706,12 @@ seq_p_FA_H2_B <- calc_seq_p(
 seq_p_FA_H3_B <- calc_seq_p(
   test_analysis = 2, # stage of interest
   test_hypothesis = "H3",
-  p_obs = tibble(analysis = 1:2, 
-                 H1 = c(p_obs_IA[1], p_obs_FA[1]), 
-                 H2 = c(p_obs_IA[2], p_obs_FA[2]), 
-                 H3 = c(p_obs_IA[3], p_obs_FA[3])), # observed p-value
+  p_obs = tibble(
+    analysis = 1:2,
+    H1 = c(p_obs_IA[1], p_obs_FA[1]),
+    H2 = c(p_obs_IA[2], p_obs_FA[2]),
+    H3 = c(p_obs_IA[3], p_obs_FA[3])
+  ), # observed p-value
   alpha_spending_type = 0,
   n_analysis = 2,
   initial_weight = w,
